{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 988,
  "lineage": "42629546-5e3f-5727-15e1-11531dce8760",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:337671252064:loadbalancer/app/test/d0708a024c2ecbf0",
            "arn_suffix": "app/test/d0708a024c2ecbf0",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-1171043513.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:337671252064:loadbalancer/app/test/d0708a024c2ecbf0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c8e5f9d6148bd3fd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04fa3044522cea927"
              },
              {
                "subnet_id": "subnet-09edf0c272b115ce6"
              },
              {
                "subnet_id": "subnet-0a513f6a38ffc9213"
              }
            ],
            "subnets": [
              "subnet-04fa3044522cea927",
              "subnet-09edf0c272b115ce6",
              "subnet-0a513f6a38ffc9213"
            ],
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0010d4896602f5ae9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:337671252064:listener/app/test/d0708a024c2ecbf0/e4d2f2b0b8917e91",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:337671252064:targetgroup/tf-20240214124430074100000005/0d5de036f72cd677",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:337671252064:listener/app/test/d0708a024c2ecbf0/e4d2f2b0b8917e91",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:337671252064:loadbalancer/app/test/d0708a024c2ecbf0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "frontend_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:337671252064:targetgroup/tf-20240214124430074100000005/0d5de036f72cd677",
            "arn_suffix": "targetgroup/tf-20240214124430074100000005/0d5de036f72cd677",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:337671252064:targetgroup/tf-20240214124430074100000005/0d5de036f72cd677",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-20240214124430074100000005",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:security-group/sg-0c8e5f9d6148bd3fd",
            "description": "Security group for test application load balancer",
            "egress": [],
            "id": "sg-0c8e5f9d6148bd3fd",
            "ingress": [],
            "name": "test-20240214124429959600000004",
            "name_prefix": "test-",
            "owner_id": "337671252064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:security-group-rule/sgr-095d514343c04edf8",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-095d514343c04edf8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c8e5f9d6148bd3fd",
            "security_group_rule_id": "sgr-095d514343c04edf8",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:security-group-rule/sgr-02ac2da81381051e3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02ac2da81381051e3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c8e5f9d6148bd3fd",
            "security_group_rule_id": "sgr-02ac2da81381051e3",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"api\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-04fa3044522cea927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.48.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa3044522cea927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"api\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:security-group/sg-0809d2f730018af86",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0809d2f730018af86",
            "ingress": [],
            "name": "api-20240214124501981600000011",
            "name_prefix": "api-",
            "owner_id": "337671252064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "timeouts": null,
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"api\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 3001,
            "id": "sgrule-2386546039",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0809d2f730018af86",
            "security_group_rule_id": "sgr-07856616dfe8f0603",
            "self": false,
            "source_security_group_id": "sg-0c8e5f9d6148bd3fd",
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1392196835",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0809d2f730018af86",
            "security_group_rule_id": "sgr-05e25129edad3b1ff",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"frontend\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-04fa3044522cea927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.48.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa3044522cea927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"frontend\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:security-group/sg-05525678f4326a2cd",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05525678f4326a2cd",
            "ingress": [],
            "name": "frontend-20240214124501981500000010",
            "name_prefix": "frontend-",
            "owner_id": "337671252064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "timeouts": null,
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"frontend\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 3000,
            "id": "sgrule-3962493584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05525678f4326a2cd",
            "security_group_rule_id": "sgr-0949c0c9393163707",
            "self": false,
            "source_security_group_id": "sg-0c8e5f9d6148bd3fd",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-547479875",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05525678f4326a2cd",
            "security_group_rule_id": "sgr-085ef063e342023b8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"streamlit_1\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-04fa3044522cea927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.48.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa3044522cea927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"streamlit_1\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:security-group/sg-052fdd2c46a2015ec",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-052fdd2c46a2015ec",
            "ingress": [],
            "name": "streamlit_1-2024021412450196610000000f",
            "name_prefix": "streamlit_1-",
            "owner_id": "337671252064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "timeouts": null,
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"streamlit_1\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 3001,
            "id": "sgrule-2697519362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-052fdd2c46a2015ec",
            "security_group_rule_id": "sgr-0fe7e2cc3e847c69b",
            "self": false,
            "source_security_group_id": "sg-0c8e5f9d6148bd3fd",
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1854132690",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-052fdd2c46a2015ec",
            "security_group_rule_id": "sgr-0b489939134d85eec",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"streamlit_2\"]",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-04fa3044522cea927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.48.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa3044522cea927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          }
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"streamlit_2\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:security-group/sg-0f2011d143eaad0f1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f2011d143eaad0f1",
            "ingress": [],
            "name": "streamlit_2-20240214124502004800000012",
            "name_prefix": "streamlit_2-",
            "owner_id": "337671252064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "timeouts": null,
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.service[\"streamlit_2\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 3001,
            "id": "sgrule-1863469556",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f2011d143eaad0f1",
            "security_group_rule_id": "sgr-0973591e5471b2999",
            "self": false,
            "source_security_group_id": "sg-0c8e5f9d6148bd3fd",
            "timeouts": null,
            "to_port": 3001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3315731716",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f2011d143eaad0f1",
            "security_group_rule_id": "sgr-0c92e7aac6170408a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_service_discovery_http_namespace.this",
            "data.aws_availability_zones.available",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.ecs.module.service.aws_security_group.this",
            "module.ecs.module.service.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:network-acl/acl-0683b43b3476c9df7",
            "default_network_acl_id": "acl-0683b43b3476c9df7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0683b43b3476c9df7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "337671252064",
            "subnet_ids": [
              "subnet-04fa3044522cea927",
              "subnet-08a35edea2a868ad4",
              "subnet-08d5a06e69adc276b",
              "subnet-09edf0c272b115ce6",
              "subnet-0a513f6a38ffc9213",
              "subnet-0f1ef9995d12404a9"
            ],
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:route-table/rtb-0c5389df6c94e75d0",
            "default_route_table_id": "rtb-0c5389df6c94e75d0",
            "id": "rtb-0c5389df6c94e75d0",
            "owner_id": "337671252064",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:security-group/sg-06de52c905320bd83",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06de52c905320bd83",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "337671252064",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d303ddcac3bd0471",
            "domain": "vpc",
            "id": "eipalloc-0d303ddcac3bd0471",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-237-229-10.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.229.10",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:internet-gateway/igw-01b905c1995b340b6",
            "id": "igw-01b905c1995b340b6",
            "owner_id": "337671252064",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d303ddcac3bd0471",
            "association_id": "eipassoc-0b026073826cea593",
            "connectivity_type": "public",
            "id": "nat-0ce6b1fedc26fc052",
            "network_interface_id": "eni-00ca1710f293bf1d9",
            "private_ip": "10.0.48.51",
            "public_ip": "15.237.229.10",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04fa3044522cea927",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-033fce15749fa8cb11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ce6b1fedc26fc052",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033fce15749fa8cb1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01b905c1995b340b6",
            "id": "r-rtb-0f8b9aa5b5a7520d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8b9aa5b5a7520d8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:route-table/rtb-033fce15749fa8cb1",
            "id": "rtb-033fce15749fa8cb1",
            "owner_id": "337671252064",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "timeouts": null,
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:route-table/rtb-0f8b9aa5b5a7520d8",
            "id": "rtb-0f8b9aa5b5a7520d8",
            "owner_id": "337671252064",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "timeouts": null,
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0827d7f43bcec4855",
            "route_table_id": "rtb-033fce15749fa8cb1",
            "subnet_id": "subnet-08d5a06e69adc276b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbbb1b86b36981c7",
            "route_table_id": "rtb-033fce15749fa8cb1",
            "subnet_id": "subnet-0f1ef9995d12404a9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0b8524719d7b60e",
            "route_table_id": "rtb-033fce15749fa8cb1",
            "subnet_id": "subnet-08a35edea2a868ad4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094cdc8f229aefdb1",
            "route_table_id": "rtb-0f8b9aa5b5a7520d8",
            "subnet_id": "subnet-04fa3044522cea927"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03032a2ff0df252e3",
            "route_table_id": "rtb-0f8b9aa5b5a7520d8",
            "subnet_id": "subnet-09edf0c272b115ce6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0009bcb4d5ba191de",
            "route_table_id": "rtb-0f8b9aa5b5a7520d8",
            "subnet_id": "subnet-0a513f6a38ffc9213"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-08d5a06e69adc276b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d5a06e69adc276b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-0f1ef9995d12404a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1ef9995d12404a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-08a35edea2a868ad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a35edea2a868ad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-04fa3044522cea927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fa3044522cea927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-09edf0c272b115ce6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09edf0c272b115ce6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:subnet/subnet-0a513f6a38ffc9213",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a513f6a38ffc9213",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "337671252064",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "vpc_id": "vpc-0010d4896602f5ae9"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:337671252064:vpc/vpc-0010d4896602f5ae9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0683b43b3476c9df7",
            "default_route_table_id": "rtb-0c5389df6c94e75d0",
            "default_security_group_id": "sg-06de52c905320bd83",
            "dhcp_options_id": "dopt-f78a659f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0010d4896602f5ae9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5389df6c94e75d0",
            "owner_id": "337671252064",
            "tags": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            },
            "tags_all": {
              "Example": "test",
              "Name": "test",
              "Repository": "337671252064.dkr.ecr.eu-west-3.amazonaws.com/central-service:latest"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}